axion-telemetry-query-service/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: axion-telemetry-query-svc
spec:
  selector:
    app: axion-telemetry-query-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
